<?xml version="1.0"?>

    <androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".EMI"
    android:background="@drawable/f2"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ScrollView android:layout_height="match_parent" android:layout_width="match_parent">


    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:ignore="Autofill"
        android:textStyle="bold"
        android:singleLine="true"
        android:inputType="number"
        android:hint="@string/hint_principal"
        android:digits="0123456789."
        android:id="@+id/principal"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:ignore="Autofill"
        android:textStyle="bold"
        android:singleLine="true"
        android:inputType="number"
        android:hint="@string/hint_interest"
        android:digits="0123456789."
        android:id="@+id/interest"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:ignore="Autofill"
        android:textStyle="bold"
        android:inputType="number"
        android:hint="@string/hint_years"
        android:digits="0123456789."
        android:id="@+id/years"
        android:textColor="#141212"/>

    <Button
        android:layout_height="50dp"
        android:layout_width="wrap_content"
        android:id="@+id/submitButton"
        android:textColor="@color/black"
        android:text="Submit"
        android:gravity="center"
        android:layout_gravity="center"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:ignore="Autofill"
        android:textStyle="bold"
        android:inputType="number"
        android:hint="@string/hint_emi"
        android:id="@+id/emi" android:maxEms="0"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:ignore="Autofill"
        android:textStyle="bold"
        android:inputType="number"
        android:hint="@string/hint_interest_total"
        android:id="@+id/interest_total"/>

</LinearLayout>

</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>