<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ecbec1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sujani.calculatorapp.StandardCal"
    tools:showIn="@layout/activity_standard_cal">

    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="end" android:textAlignment="textEnd" android:editable="false" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:id="@+id/editText1"/>

    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="end" android:textAlignment="textEnd" android:editable="false" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:id="@+id/editText2" android:layout_below="@+id/editText1"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:id="@+id/clear" android:layout_below="@+id/editText2" android:onClick="onClick" android:text="@string/clear" style="?android:attr/buttonStyleSmall"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/backSpace" android:onClick="onClick" android:text="@string/backspace" style="?android:attr/buttonStyleSmall" android:layout_toEndOf="@+id/clear" android:layout_toRightOf="@+id/clear" android:layout_alignBottom="@+id/clear"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:id="@+id/num7" android:layout_below="@+id/clear" android:onClick="onClick" android:text="7"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/num8" android:onClick="onClick" android:text="8" android:layout_toEndOf="@+id/num7" android:layout_toRightOf="@+id/num7" android:layout_alignBottom="@+id/num7"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/num9" android:onClick="onClick" android:text="9" android:layout_toEndOf="@+id/num8" android:layout_toRightOf="@+id/num8" android:layout_alignBottom="@+id/num8"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:id="@+id/num4" android:layout_below="@+id/num7" android:onClick="onClick" android:text="4"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/num5" android:onClick="onClick" android:text="5" android:layout_toEndOf="@+id/num4" android:layout_toRightOf="@+id/num4" android:layout_alignBottom="@+id/num4"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/num6" android:onClick="onClick" android:text="6" android:layout_toEndOf="@+id/num5" android:layout_toRightOf="@+id/num5" android:layout_alignBottom="@+id/num5"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:id="@+id/num1" android:layout_below="@+id/num4" android:onClick="onClick" android:text="1"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/num2" android:onClick="onClick" android:text="2" android:layout_alignBottom="@+id/num1" android:layout_alignStart="@+id/num5" android:layout_alignLeft="@+id/num5"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/num3" android:onClick="onClick" android:text="3" android:layout_toEndOf="@+id/num2" android:layout_toRightOf="@+id/num2" android:layout_alignBottom="@+id/num2"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:id="@+id/posneg" android:layout_below="@+id/num1" android:onClick="onClick" android:text="@string/posneg" android:textSize="20dp"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/num0" android:onClick="onClick" android:text="0" android:layout_toEndOf="@+id/posneg" android:layout_toRightOf="@+id/posneg" android:layout_alignBottom="@+id/posneg"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/dot" android:onClick="onClick" android:text="." android:layout_toEndOf="@+id/num0" android:layout_toRightOf="@+id/num0" android:layout_alignBottom="@+id/num0" android:textSize="20dp"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/plus" android:onClick="onClick" android:text="+" android:layout_toEndOf="@+id/num9" android:layout_toRightOf="@+id/num9" android:layout_above="@+id/num6"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/minus" android:onClick="onClick" android:text="-" android:layout_toEndOf="@+id/num6" android:layout_toRightOf="@+id/num6" android:textSize="20dp" android:layout_above="@+id/num3"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/divide" android:onClick="onClick" android:text="@string/divide" android:layout_alignStart="@+id/minus" android:layout_alignLeft="@+id/minus" android:layout_above="@+id/dot"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/multiply" android:onClick="onClick" android:text="x" android:layout_alignBottom="@+id/dot" android:layout_alignStart="@+id/divide" android:layout_alignLeft="@+id/divide"/>

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:id="@+id/equal" android:layout_below="@+id/openBracket" android:onClick="onClick" android:text="="/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/square" android:layout_below="@+id/dot" android:onClick="onClick" android:text="@string/square" android:layout_toStartOf="@+id/sqrt" android:layout_toLeftOf="@+id/sqrt"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sqrt" android:onClick="onClick" android:text="@string/sqrt" android:layout_alignBottom="@+id/square" android:layout_alignStart="@+id/multiply" android:layout_alignLeft="@+id/multiply"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:id="@+id/openBracket" android:layout_below="@+id/posneg" android:onClick="onClick" android:text="@string/openBracket"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/closeBracket" android:onClick="onClick" android:text="@string/closeBracket" android:layout_toEndOf="@+id/openBracket" android:layout_toRightOf="@+id/openBracket" android:layout_alignBottom="@+id/square"/>

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:id="@+id/history" android:layout_below="@+id/equal" android:onClick="onClick" android:text="@string/history"/>

</RelativeLayout>